// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/WMarker render a "area marker" ("rect") correctly 1`] = `
<g>
  <!---->
  <!---->
  <rect stroke="#333333" stroke-width="1" stroke-dasharray="0" fill="none" x="-190" y="30" width="0" height="10"></rect>
  <!---->
</g>
`;

exports[`Components/WMarker render a "horizontal marker" ("yLine") correctly 1`] = `
<g>
  <line stroke="#333333" stroke-width="1" stroke-dasharray="0" x1="40" y1="10" x2="580" y2="10"></line>
  <!---->
  <!----> <text text-anchor="end" x="575" y="10" dy="-10" style="fill: #333333; font-size: 14;">

  </text>
</g>
`;

exports[`Components/WMarker render a "horizontal range marker" ("yRange") correctly 1`] = `
<g>
  <!---->
  <!---->
  <rect stroke="#333333" stroke-width="1" stroke-dasharray="0" fill="none" x="40" y="10" width="540" height="10"></rect>
  <!---->
</g>
`;

exports[`Components/WMarker render a "point marker" ("point") correctly 1`] = `
<g>
  <!---->
  <circle stroke="#333333" stroke-width="1" stroke-dasharray="0" fill="none" r="10" cx="-190" cy="20"></circle>
  <!---->
  <!---->
</g>
`;

exports[`Components/WMarker render a "vertical marker" ("xLine") correctly 1`] = `
<g>
  <line stroke="#333333" stroke-width="1" stroke-dasharray="0" x1="-190" y1="10" x2="-190" y2="376"></line>
  <!---->
  <!----> <text text-anchor="end" x="-195" y="10" dy="15" style="fill: #333333; font-size: 14;">

  </text>
</g>
`;

exports[`Components/WMarker render a "vertical range marker" ("xRange") correctly 1`] = `
<g>
  <!---->
  <!---->
  <rect stroke="#333333" stroke-width="1" stroke-dasharray="0" fill="none" x="-190" y="10" width="0" height="366"></rect>
  <!---->
</g>
`;
